--- a/index.html
+++ b/index.html
@@ -2,22 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
-  <style>
-    .container{
-      margin:50px auto;
-      text-align: center;
-      font-size:50px;
-    }
-    a{
-      text-decoration: none;
-      color:darkred;
-    }
-  </style>
 </head>
 <body>
-<div class="container">
-  <p><a href="/login">微信授权登录</a></p>
+<div style="text-align:center">
+    <a href="/wxLogin">微信公众授权登录</a>
 </div>
 </body>
 </html>
